--- a/src/webviews/apps/home/partials/state.free-preview.html
+++ b/src/webviews/apps/home/partials/state.free-preview.html
@@ -1,5 +1,5 @@
 <template id="state:free-preview">
-	<h3>Trying GitLens+ Features</h3>
+	<h3>Trying GitLens+ Features HI MOM</h3>
 	<p>
 		You have <span data-bind="previewDays">3 days</span> left in your
 		<a title="Learn more about GitLens+ features" href="command:gitlens.plus.learn">GitLens+ features</a>
