add gk graph with refs and commits

--- a/src/webviews/apps/plus/graph/graph.scss
+++ b/src/webviews/apps/plus/graph/graph.scss
@@ -6,3 +6,4 @@
 
 @import '../../shared/codicons';
 @import '../../shared/utils';
+@import '../../../../../node_modules/@axosoft/gitkraken-components/lib/css/GKGraphStyles.css';
